tests/valid/test3.wf
activo = NOT (FALSE OR (TRUE AND FALSE));
print(activo);
