tests/invalid/error5.wf
a = (TRUE AND FALSE;
print(a);
